	  .version:
	  __sdcc_external_startup return checking for pdk, patch #455 by Basil Hussain.
	* src/mos6502/peeph.def:
	  mos6502 peephole rule fix, patch #453 by Michel Iwaniec.
	* src/stm8/gen.c
	  Type fix for code generation (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
	* src/z80/gen.c,
	  support/regression/tests/bug-3532.c:
	  Fix bug #3532.

2023-01-19 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/*/crt0.s,
	  src/SDCCglue.c,
	  src/stm8/main.c,
	  .version:
	  Patch #453 by Basil Hussain to further harmonize __sdcc_external_startup (RFE #859).
	* src/z80/gen.c,
	  src/ds390/gen.c,
	  src/mcs51/gen.c:
	  Type fixes for code generation (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
	* doc/sdccman.lyx:
	  Improve __sdcc_external_startup documentation.

2023-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-va-arg-5.c:
	  Disable Test for GCC up to 11, since it still fails on x86 hosts for that version.
	* support/regression/cases/Makefile.in:
	  Disable Test that tests for GCC implementation-defined behaviour (GIMPLE memory model).

2023-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: Improve pointer aliasing handling,
	  minor reduction in memory leakage
	* support/regression/tests/bug-2957.c,
	  support/regression/tests/gcc-torture-execute-pr20466-1.c:
	  Reenable tests

2023-01-08 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCmain.c:
	  Add "TD-" to the version string of treedec-less builds.

2023-01-08 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Amend claims concerning intrinsic address space support.

2023-01-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-3504.c:
	  Fix bug #3504.

2022-12-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClabel.c (labelUnreach, deleteIfx),